[package]
name = "brokenlinks"
version = "0.1.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Find broken links in a site"
edition = "2018"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
select = "0.6.0"
threadpool = "1.8"